--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,33 +37,63 @@
   }
 
   html body {
-    @apply mx-auto flex min-h-screen max-w-4xl flex-col px-8 pt-8 font-mono text-sm font-normal antialiased bg-bgColor text-textColor;
+    @apply mx-auto flex min-h-screen max-w-6xl flex-col px-8 pt-8 font-mono text-sm font-normal antialiased bg-bgColor text-textColor;
+  }
+
+  .prose-cody blockquote {
+    @apply text-accent border-l-0;
+  }
+
+  .prose-cody a {
+    @apply no-underline;
+  }
+
+  .prose-cody strong {
+    font-weight: 700;
+  }
+
+  .prose-cody code {
+    @apply rounded-sm border-dotted border-surface;
+  }
+
+  .prose-cody hr {
+    border-top-style: dashed;
+    border-top-width: 0.5px;
+    @apply border-accent;
+  }
+  .prose-cody thead {
+    @apply border-b-0;
+  }
+
+  .prose-cody thead th {
+    @apply font-bold border-b border-dashed border-surface;
+  }
+
+  .prose-cody tbody tr {
+    @apply border-b-0;
+  }
+
+  .prose-cody tfoot {
+    @apply font-bold border-t border-dashed border-surface;
+  }
+
+  .prose-cody sup {
+    @apply ms-0.5;
+  }
+
+  .prose-cody sup > a {
+    @apply bg-none;
+  }
+
+  .prose-cody sup > a:hover {
+    @apply text-link no-underline bg-none;
+  }
+
+  .prose-cody sup > a:before {
+    content: "[";
+  }
+
+  .prose-cody sup > a:after {
+    content: "]";
   }
 }
-
-/* :root { */
-/* 	--accent: #2337ff; */
-/* 	--accent-dark: #000d8a; */
-/* 	--black: 15, 18, 25; */
-/* 	--gray: 96, 115, 159; */
-/* 	--gray-light: 229, 233, 240; */
-/* 	--gray-dark: 34, 41, 57; */
-/* 	--gray-gradient: rgba(var(--gray-light), 50%), #fff; */
-/* 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), */
-/* 		0 16px 32px rgba(var(--gray), 33%); */
-/* } */
-
-/* @font-face { */
-/*   font-family: "Atkinson"; */
-/*   src: url("/fonts/atkinson-regular.woff") format("woff"); */
-/*   font-weight: 400; */
-/*   font-style: normal; */
-/*   font-display: swap; */
-/* } */
-/* @font-face { */
-/*   font-family: "Atkinson"; */
-/*   src: url("/fonts/atkinson-bold.woff") format("woff"); */
-/*   font-weight: 700; */
-/*   font-style: normal; */
-/*   font-display: swap; */
-/* } */
