--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 ---
 
-<BaseLayout meta={{title: SITE_TITLE, description: SITE_DESCRIPTION}}>
+<BaseLayout>
 		<main>
 			<h1>🧑‍🚀 Hello, Astronaut!</h1>
 			<p>
