--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -106,7 +106,7 @@
     @apply -mr-2;
   }
 
-  .tag-link {
+  .cody-link {
     @apply bg-[size:100%_6px] bg-bottom bg-repeat-x w-fit;
     background-image: linear-gradient(
       transparent,
@@ -116,7 +116,7 @@
     );
   }
 
-  .tag-link:hover {
+  .cody-link:hover {
     background-image: linear-gradient(
       transparent,
       transparent 4px,
