--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -34,7 +34,7 @@ const title = SITE_TITLE + " Tags"
 	<ul>
 		{tags.map(tag => (
 			<li class="my-2">
-				<a class="tag-link">#{tag[0]}</a>
+				<a class="cody-link">#{tag[0]}</a>
 				({tag[1]})
 			</li>
 		))}
