--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,6 +1,6 @@
 ---
 import { CollectionEntry, getCollection } from 'astro:content';
-import BaseLayout from '../layouts/Base.astro';
+import Layout from '../layouts/Sidebar.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
@@ -18,7 +18,6 @@ const {
 	updatedDate, 
 	heroImage, 
 	slug, 
-	publishDate, 
 	ogImage,
 	tags,
 } = Astro.props;
@@ -27,11 +26,12 @@ const socialImage = ogImage ?? `/og-image/${slug}.png`;
 const dateTimeOptions: Intl.DateTimeFormatOptions = {
 	month: "long",
 };
-// const articleDate = updatedDate?.toISOString() ?? publishDate.toISOString();
+
+// const articleDate = updatedDate?.toISOString() ?? pubDate.toISOString();
 ---
 
-<BaseLayout title={title} description={description} image={socialImage}>
-	<article>
+<Layout title={title} description={description} image={socialImage}>
+	<article class="cody-bg w-3/4">
 		{heroImage && <img width={1020} height={510} src={heroImage} alt="" class="mb-4"/>}
 		<div class="prose dark:prose-invert prose-cody">
 			<h1 class="text-3xl my-0">{title}</h1>
@@ -60,4 +60,7 @@ const dateTimeOptions: Intl.DateTimeFormatOptions = {
 			</div>
 		</div>
 	</article>
-</BaseLayout>
+	<aside>
+		<slot name="sidebar"/>
+	</aside>
+</Layout>
