--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,7 +2,7 @@
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
-import BaseLayout from '../../layouts/Base.astro';
+import BaseLayout from '../../layouts/Sidebar.astro';
 import { getUniqueTags } from '@/utils';
 
 const posts = (await getCollection('blog', ({data}) => {
@@ -16,7 +16,7 @@ const tags = getUniqueTags(posts).slice(0,10);
 ---
 
 <BaseLayout>
-	<section class="flex gap-4">
+	<section class="flex gap-4 cody-bg">
 		<ul class="flex flex-col gap-4">
 			{
 				posts.map((post) => (
@@ -32,35 +32,35 @@ const tags = getUniqueTags(posts).slice(0,10);
 				))
 			}
 		</ul>
-		<aside class="sidebar">
-			<h2 class="flex font-semibold text-lg items-center mb-4">
-				<svg
-					aria-hidden="true"
-					xmlns="http://www.w3.org/2000/svg"
-					class="h-6 w-6"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					fill="none"
-					stroke-linecap="round"
-					stroke-linejoin="round"
-				>
-					<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-					<path d="M7.859 6h-2.834a2.025 2.025 0 0 0 -2.025 2.025v2.834c0 .537 .213 1.052 .593 1.432l6.116 6.116a2.025 2.025 0 0 0 2.864 0l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-6.117 -6.116a2.025 2.025 0 0 0 -1.431 -.593z" />
-					<path d="M17.573 18.407l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-7.117 -7.116" />
-					<path d="M6 9h-.01" />
-				</svg>
-				Tags
-			</h2>
-			<ul class="flex gap-2 flex-wrap mb-4">
-				{tags.map(tag => (
-					<li class="tag">
-						{tag}
-					</li>
-				))}
-			</ul>
-			<a href="/tags" class="cody-link">See more -></a>
-		</aside>
 	</section>
+	<aside class="sidebar" slot="sidebar">
+		<h2 class="flex font-semibold text-lg items-center mb-4">
+			<svg
+				aria-hidden="true"
+				xmlns="http://www.w3.org/2000/svg"
+				class="h-6 w-6"
+				viewBox="0 0 24 24"
+				stroke-width="1.5"
+				stroke="currentColor"
+				fill="none"
+				stroke-linecap="round"
+				stroke-linejoin="round"
+			>
+				<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+				<path d="M7.859 6h-2.834a2.025 2.025 0 0 0 -2.025 2.025v2.834c0 .537 .213 1.052 .593 1.432l6.116 6.116a2.025 2.025 0 0 0 2.864 0l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-6.117 -6.116a2.025 2.025 0 0 0 -1.431 -.593z" />
+				<path d="M17.573 18.407l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-7.117 -7.116" />
+				<path d="M6 9h-.01" />
+			</svg>
+			Tags
+		</h2>
+		<ul class="flex gap-2 flex-wrap mb-4">
+			{tags.map(tag => (
+				<li class="tag">
+					{tag}
+				</li>
+			))}
+		</ul>
+		<a href="/tags" class="cody-link">See more -></a>
+	</aside>
 </BaseLayout>
 
