--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -20,7 +20,7 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION, image } = Astro.prop
 	</head>
 	<body>
 		<Header/>
-		<main class="p-4">
+		<main>
 			<slot/>
 		</main>
 		</Footer/>
