footer not rendering

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -23,6 +23,6 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION, image } = Astro.prop
 		<main>
 			<slot/>
 		</main>
-		</Footer/>
+		<Footer/>
 	</body>
 </html
