--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -24,6 +24,6 @@ const { title = SITE_TITLE, description = SITE_DESCRIPTION, image } = Astro.prop
 			<slot/>
 			<slot name="sidebar"/>
 		</main>
-		</Footer/>
+		<Footer/>
 	</body>
 </html
