change color to accent-2

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -16,7 +16,7 @@ const isActive = href === pathname || href === pathname.replace(/\/$/, '');
 <style>
 a:before {
 	content: "./";
-	@apply -mr-2 text-surface;
+	@apply -mr-2 text-accent-2;
 }
 a {
 	@apply text-accent mr-1;
