use theme text color

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -33,7 +33,7 @@ const dateTimeOptions: Intl.DateTimeFormatOptions = {
 <Layout title={title} description={description} image={socialImage}>
 	<article class="cody-bg w-3/4">
 		{heroImage && <img width={1020} height={510} src={heroImage} alt="" class="mb-4"/>}
-		<div class="prose dark:prose-invert prose-cody">
+		<div class="prose dark:prose-invert prose-cody text-textColor">
 			<h1 class="text-3xl my-0">{title}</h1>
 			<span class="font-semibold">
 				<FormattedDate date={pubDate} dateTimeOptions={dateTimeOptions} />
