--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -8,6 +8,8 @@ import PostPreview from '@/components/blog/PostPreviewA';
 // Alternative post item
 // import PostPreview from '@/components/blog/PostPreviewB';
 
+import Pagination from '@/components/Pagination';
+
 export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 	const allPosts = await getAllPosts();
 	const allPostsByDate = sortMDByDate(allPosts);
@@ -17,7 +19,7 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 		const filterPosts = allPostsByDate.filter((post) => post.data.tags.includes(tag));
 		return paginate(filterPosts, {
 			params: { tag },
-			pageSize: 10,
+			pageSize: 2,
 		});
 	});
 };
@@ -64,5 +66,6 @@ const paginationProps = {
 					))
 				}
 		</ul>
+		<Pagination {...paginationProps} />
 	</section>
 </BaseLayout>
