--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -44,7 +44,7 @@ const paginationProps = {
 <BaseLayout meta={meta}>
 	<section class="flex gap-4 cody-bg">
 		<div>
-			<h1 class="title text-lg font-bold mb-4">Posts</h1>
+			<h1 class="title">Posts</h1>
 			<ul class="flex flex-col gap-4">
 				{
 					page.data.map(post => (
