--- a/src/pages/tags/[tag]/[...page].astro
+++ b/src/pages/tags/[tag]/[...page].astro
@@ -19,7 +19,7 @@ export const getStaticPaths: GetStaticPaths = async ({ paginate }) => {
 		const filterPosts = allPostsByDate.filter((post) => post.data.tags.includes(tag));
 		return paginate(filterPosts, {
 			params: { tag },
-			pageSize: 2,
+			pageSize: 10,
 		});
 	});
 };
@@ -52,20 +52,18 @@ const paginationProps = {
 };
 ---
 
-<BaseLayout meta={meta}>
-	<section class="cody-bg flex flex-col gap-4">
-		<h1 class="title flex items-center text-lg">
-			<a href="/tags/" class="text-accent sm:hover:underline">Tags</a>
-			<span class="me-3 ms-2">→</span>
-			<span>#{tag}</span>
-		</h1>
-		<ul class="flex flex-col gap-4">
-				{
-					page.data.map(post => (
-						<PostPreview post={post}/>
-					))
-				}
-		</ul>
-		<Pagination {...paginationProps} />
-	</section>
+<BaseLayout title={meta.title} description={meta.description}>
+	<h1 class="title flex items-center">
+		<a href="/tags/" class="text-accent sm:hover:underline">Tags</a>
+		<span class="me-3 ms-2">→</span>
+		<span>#{tag}</span>
+	</h1>
+	<ul class="flex flex-col gap-4">
+		{
+		page.data.map(post => (
+			<PostPreview post={post}/>
+		))
+		}
+	</ul>
+	<Pagination {...paginationProps} />
 </BaseLayout>
