--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -13,7 +13,8 @@ const title = SITE_TITLE + " Tags"
 ---
 
 <BaseLayout title={title}>
-	<h1 class="flex font-bold text-xl items-center mb-4"> <svg
+	<h1 class="flex font-bold text-xl items-center mb-4"> 
+		<svg
 			aria-hidden="true"
 			xmlns="http://www.w3.org/2000/svg"
 			class="h-6 w-6"
@@ -23,7 +24,7 @@ const title = SITE_TITLE + " Tags"
 			fill="none"
 			stroke-linecap="round"
 			stroke-linejoin="round"
-		>
+			>
 			<path stroke="none" d="M0 0h24v24H0z" fill="none" />
 			<path d="M7.859 6h-2.834a2.025 2.025 0 0 0 -2.025 2.025v2.834c0 .537 .213 1.052 .593 1.432l6.116 6.116a2.025 2.025 0 0 0 2.864 0l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-6.117 -6.116a2.025 2.025 0 0 0 -1.431 -.593z" />
 			<path d="M17.573 18.407l2.834 -2.834a2.025 2.025 0 0 0 0 -2.864l-7.117 -7.116" />
