remove margin in site title

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,6 +27,7 @@ import ThemeToggle from '../components/ThemeToggle.astro';
 
 	.title:before{
 		content:"[";
+		margin-right: 0;
 	}
 
 	.title:after {
