add author config option

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
+import { AUTHOR, SITE_TITLE, SITE_DESCRIPTION } from '../consts.ts';
 
 interface Props {
 	title: string;
@@ -32,6 +33,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
+<meta name="author" content={AUTHOR} />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
