--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -8,11 +8,12 @@ interface Props {
 	title: string;
 	description: string;
 	image?: string;
+	articleDate?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, articleDate, image = '/blog-placeholder-1.jpg' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -41,6 +42,14 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
 <meta property="og:image" content={new URL(image, Astro.url)} />
+{
+	articleDate && (
+		<>
+			<meta property="article:author" content={AUTHOR} />
+			<meta property="article:published_time" content={articleDate} />
+		</>
+	)
+}
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
